[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Weapon2D/Weapon2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/SelectableArea2D/SelectableArea2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/UIUnit/UIUnit.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprite-sheet.svg" type="Texture" id=4]
[ext_resource path="res://Objects/Towers/Tower.gd" type="Script" id=5]
[ext_resource path="res://UI/UICooldownBar/UICooldownBar.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Tower" type="Node2D"]
script = ExtResource( 5 )

[node name="BaseSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 32, 32 )
region_enabled = true
region_rect = Rect2( 192, 64, 73, 64 )

[node name="Weapon2D" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 36 )

[node name="GlassSprite" type="Sprite" parent="."]
position = Vector2( 0, 7 )
texture = ExtResource( 4 )
offset = Vector2( 32, 32 )
region_enabled = true
region_rect = Rect2( 272, 89, 26, 27 )

[node name="SelectableArea2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectableArea2D"]
shape = SubResource( 1 )

[node name="Interface" parent="." instance=ExtResource( 3 )]
rect_scale = Vector2( 1, 1 )

[node name="SellButton" type="Button" parent="Interface"]
margin_left = -32.0
margin_top = 70.0
margin_right = 88.0
margin_bottom = 104.0
rect_min_size = Vector2( 70, 0 )
text = "Sell"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UICooldownBar" parent="." instance=ExtResource( 6 )]

[node name="Upgrades" type="Node" parent="."]

[connection signal="fired" from="Weapon2D" to="." method="_on_Weapon2D_fired"]
[connection signal="selection_changed" from="SelectableArea2D" to="." method="_on_SelectableArea2D_selection_changed"]
[connection signal="pressed" from="Interface/SellButton" to="." method="_on_SellButton_pressed"]
